# training-sync

./: .gitignore  AGENTS.md  README.md  conftest.py  example_workout.json  garmin_exercises.json  pyproject.toml  requirements.txt  sync.py
docs/superpowers/plans/: 2026-06-15-garmin-sync.md  2026-06-18-refactoring.md  2026-06-20-training-sync-weightxreps.md  2026-06-27-weightxreps-exercise-resolution.md  2026-07-13-openspec-superpowers-integration.md
docs/superpowers/specs/: 2026-06-15-garmin-sync-python-design.md  2026-06-18-refactoring-design.md  2026-06-20-training-sync-weightxreps-design.md  2026-06-22-weightxreps-exercise-resolution-design.md  2026-07-04-one-day-sync-cycling-design.md  2026-07-13-openspec-superpowers-integration-design.md
openspec/: config.yaml
openspec/changes/add-one-day-multi-activity-sync/: brainstorm.md  plan.md  (+4 more)
src/garmin_sync/: auth.py  cli.py  garmin_payloads.py  mapper.py  workouts.py
src/training_sync/: __init__.py  cli.py  config.py
tests/: test_activity_classification.py  test_cli.py  test_domain_training_entry.py  test_fetch.py  test_garmin_auth.py  test_garmin_daily_renderer.py  test_garmin_package.py  test_mapper.py  test_parser.py  test_project_identity.py  test_strength_workout_plan.py  test_training_sync_cli.py  test_use_case_sync_day.py  test_vault_training_block.py  test_weight.py  test_weightxreps_auth.py  test_weightxreps_client.py  test_weightxreps_exercise_mapping.py  test_weightxreps_exercise_resolution.py  test_weightxreps_jeditor.py  test_weightxreps_preview.py  test_weightxreps_push.py  test_weightxreps_text.py
(+59 files in other folders)
