[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "training-sync"
version = "1.0.0"
description = "Synchronize training data across Garmin Connect, Obsidian, and Weight x Reps"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "garminconnect",
    "requests",
    "tomli; python_version < '3.11'"
]

[project.scripts]
training-sync = "training_sync.cli:main"
